# chat-app

chat-server/: Cargo.toml  creation_script.sql  db.properties  queries.sql
chat-server/src/: app_runner.rs  config.rs  main.rs
chat-server/src/auth/: jwt_auth.rs
chat-server/src/dto/: mod.rs  prelude.rs  private_login_dto.rs  public_login_dto.rs
chat-server/src/entity/: file.rs  mod.rs  prelude.rs  private_message.rs  private_room.rs  private_room_user_distro.rs  private_user.rs  public_message.rs  public_room.rs  public_user.rs
chat-server/src/manager/: mod.rs  public_message_manager.rs  websocket_manager.rs
chat-server/src/message/: mod.rs  socket_message.rs
chat-server/src/repository/: mod.rs  public_message_repository.rs  user_repository.rs
chat-server/src/service/: mod.rs  private_login_service.rs  public_login_service.rs
chat-server/src/shared_state/: mod.rs  private_router_state.rs  public_router_state.rs
chat-web-client/: README.md  angular.json  package-lock.json  package.json
chat-web-client/src/: index.html  variables.scss
chat-web-client/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
chat-web-client/src/app/authguards/: public-chat-guard.service.spec.ts  public-chat-guard.service.ts
chat-web-client/src/app/component/login/: login.component.html  login.component.scss  login.component.ts
chat-web-client/src/app/component/public-chat/: public-chat.component.html  public-chat.component.scss  (+2 more)
chat-web-client/src/app/service/: public-user-socket.service.spec.ts  public-user-socket.service.ts
(+24 files in other folders)
