[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio", "macros"] }
axum = { version = "0.6.20", features = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "__private_docs", "headers", "macros", "tracing", "ws", "multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
jsonwebtoken = "9.2.0"
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.188", features = ["std", "derive", "serde_derive"]}
java-properties = "2.0.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio"] }
futures-util = "0.3.29"
serde_json = {version = "1.0.108", features = ["std"] }
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
dotenv_codegen = "0.15.0"